rte overflow fix

--- a/projects/ui-framework/bob-rte/src/rte/rte.component.scss
+++ b/projects/ui-framework/bob-rte/src/rte/rte.component.scss
@@ -15,7 +15,6 @@
 
 .bfe-wrap {
   position: relative;
-  z-index: 0;
   background-color: white;
   border: 1px solid $input-border-color;
   border-radius: $border-radius;
